修改主页，新增第一条博客

--- a/_config.yml
+++ b/_config.yml
@@ -51,16 +51,16 @@ exclude:
   - README.md
 
 collections:
-  # pages:
-  #   output: true
-  #   permalink: /:collection/:path/
+  pages:
+    output: true
+    permalink: /:collection/:path/
   # others:
   #   output: true
   #   permalink: /:collection/:path/
 
 ordered_collections:
   - posts
-  # - pages
+  - pages
   # - others
 
 page_width: 800px
